# pcl-exchange

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_workflow.py  workflow_demo.ipynb
schemas/: envelope.json
src/pcl_exchange/: builder.py  crypto.py  models.py  validation.py
tests/: conftest.py  test_builder.py  test_crypto.py  test_shacl.py  test_validation.py
